--- a/index.html
+++ b/index.html
@@ -1,34 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-us">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Brian Santos</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <title>About | Brian Santos</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-    <Header>
-        <h2>Brian Santos</h2>
-    </Header>
-    <nav>
-        <a href="index.html">About</a> |
-        <a href="porfolio.html">Portfolio</a> |
-        <a href="contact.html">Contact</a> |
-    </nav>
-    <div class="main">
-        <p></p>
-    </div>
-        <div class="me">
-            <h2>About Me</h2>
+    <header id="masthead">
+        <div class="container">
+            <a href="index.html" id="logo">Brian Santos</a>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
         </div>
-            <div class="connect">
-                <h3>Connect with Me</h3>
+    </header>
+    <div id="main-container" class="container">
+        <section class="main-section">
+            <h1>About Me</h1>
+            <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+            <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
+            <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
+        </section>
+        <section class="sidebar">
+            <div id="connect">
+                <h2>Connect with Me</h2>
+                <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+                <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+                <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
             </div>
+        </section>
+    </div>
     <footer>
-        <p>Copyright 2018 Brian Santos</p>
+        <div class="container">
+            Copyright &copy;
+        </div>
     </footer>
-    
 </body>
+
 </html>
