--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
     </div>
     <footer>
         <div class="container">
-            Copyright &copy;
+            &copy; Copyright 2018 Brian Santos
         </div>
     </footer>
 </body>
