--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
     </div>
     <footer>
         <div class="container">
-            Copyright &copy;
+            &copy; Copyright 2018 Brian Santos
         </div>
     </footer>
 </body>
