--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div id="main-container" class="container">
         <section class="main-section">
             <h1>About Me</h1>
-            <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
-            <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
-            <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
+            <img src="assets/images/solo.jpg" class="auth-image" alt="Your Name">
+            <p>Brian Santos was born in Honolulu, Hawaii. Brian's father was in the Navy and his mother was a nurse. Due to the nature of his father being in the military they moved around a lot.</p>
+            <p>Brian has lived in San Diego, Chula Vista to be specific most of his life. Brian's hobbies include Crossfit, weightlifting, hiking, and playing with his two Siberian Huskies.</p>
         </section>
         <section class="sidebar">
             <div id="connect">
@@ -37,7 +37,7 @@
     </div>
     <footer>
         <div class="container">
-            Copyright &copy;
+            &copy; Copyright 2018 Brian Santos
         </div>
     </footer>
 </body>
